--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.3",
     "react-select": "^1.2.1",
     "react-virtualized-select": "^3.1.3",
     "reactstrap": "^5.0.0-beta.3",
@@ -32,7 +32,13 @@
     "eslint": "^5.6.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^2.6.2",
-    "gh-pages": "^1.1.0",
+    "gh-pages": "^2.0.1",
     "prettier": "^1.14.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
